--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,36 @@
+html,
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.layout {
+	/* background-color: #95a5a6;
+	padding: 10px; */
+	display: grid;
+	grid-template-columns: repeat(12, 1fr);
+	grid-template-rows: 8vh 92vh;
 }
 
-.expad {
-  padding: 20px;
+.TheHeader {
+	background-color: #e74c3c;
+	padding: 10px;
+	grid-column: 1 / -1;
+}
+
+.Thesidebar {
+	background-color: #2980b9;
+	padding: 10px;
+	grid-column: 1 / 3;
+	grid-column-start: 1;
+}
+
+.TheContent {
+	background-color: #16a085;
+	padding: 10px;
+	grid-column: 3 / -1;
+}
+
+ul {
+	list-style: none;
 }
