--- a/src/index.css
+++ b/src/index.css
@@ -5,30 +5,29 @@ body {
 }
 
 .layout {
-	/* background-color: #95a5a6;
-	padding: 10px; */
 	display: grid;
-	grid-template-columns: repeat(12, 1fr);
 	grid-template-rows: 8vh 92vh;
+	grid-template-areas:
+		'sidebar header header header header header'
+		'sidebar main main main main main';
 }
 
 .TheHeader {
 	background-color: #e74c3c;
 	padding: 10px;
-	grid-column: 1 / -1;
+	grid-area: header;
 }
 
 .Thesidebar {
 	background-color: #2980b9;
 	padding: 10px;
-	grid-column: 1 / 3;
-	grid-column-start: 1;
+	grid-area: sidebar;
 }
 
 .TheContent {
 	background-color: #16a085;
 	padding: 10px;
-	grid-column: 3 / -1;
+	grid-area: main;
 }
 
 ul {
