--- a/src/index.css
+++ b/src/index.css
@@ -19,9 +19,31 @@ body {
 }
 
 .Thesidebar {
-	background-color: #2980b9;
-	padding: 10px;
+	/* background-color: #343a40; */
+	/* padding: 10px; */
 	grid-area: sidebar;
+	display: flex;
+	flex-direction: column;
+
+	/* #4b545c  for border bottom*/
+}
+
+.sideHeader {
+	flex: 0.17;
+	background-color: aqua;
+	border-bottom: 1px solid #4b545c;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+}
+
+.sideMain {
+	flex: 2;
+	background-color: chartreuse;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .TheContent {
