--- a/src/index.css
+++ b/src/index.css
@@ -21,17 +21,16 @@
 	background: #fff;
 }
 
-/*
-
-.logo {
-	height: 32px;
-	margin: 16px;
-	background: rgba(255, 255, 255, 0.3);
-}
-
-.site-layout .site-layout-background {
+.spinCenter {
+	margin: 200px 0;
+	margin-bottom: 20px;
+	padding: 30px 50px;
+	text-align: center;
 	background: #fff;
+	border-radius: 4px;
 }
+
+/*
 
 [data-theme='dark'] .site-layout .site-layout-background {
 	background: #141414;
@@ -44,43 +43,4 @@
 		'sidebar header header header header header'
 		'sidebar main main main main main';
 }
-
-.TheHeader {
-	background-color: #e74c3c;
-	padding: 10px;
-	grid-area: header;
-}
-
-.Thesidebar {
-	grid-area: sidebar;
-	display: flex;
-	flex-direction: column;
-}
-
-.sideHeader {
-	flex: 0.17;
-	background-color: aqua;
-	border-bottom: 1px solid #4b545c;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-evenly;
-	align-items: center;
-}
-
-.sideMain {
-	flex: 2;
-	background-color: chartreuse;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-}
-
-.TheContent {
-	background-color: #16a085;
-	padding: 10px;
-	grid-area: main;
-}
-
-ul {
-	list-style: none;
-} */
+*/
