--- a/src/index.css
+++ b/src/index.css
@@ -30,6 +30,22 @@
 	border-radius: 4px;
 }
 
+.classForm {
+	padding: 24px;
+	background: #fbfbfb;
+	border: 1px solid #d9d9d9;
+	border-radius: 6px;
+}
+
+@media (max-width: 768px) {
+	.sidebarL {
+		display: none;
+	}
+	.searchHead {
+		display: none;
+	}
+}
+
 /*
 
 [data-theme='dark'] .site-layout .site-layout-background {
